# tasca_3_Lluis_Suau

./: pyproject.toml
notebooks/: client.ipynb  data_preparation.ipynb  decision_trees.ipynb  knn.ipynb  logistic_regression.ipynb  svm.ipynb
tasca_3_lluis_suau/: data_preparation.py  iris_predict_app.py  iris_predict_service.py
