[tool.poetry]
name = "tasca-3-lluis-suau"
version = "0.1.0"
description = ""
authors = ["Lluís Suau <78743468+LluisPecos@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
scikit-learn = "^1.3.2"
pandas = "^2.1.3"
ipykernel = "^6.27.1"
flask = "^3.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
